изменен вид сайта на десктопе, скорректировано отображение попап и кнопок на разных разрешениях

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <main class="page">
+      <div class="background">
       <header class="header">
         <button class="hamburger-menu"></button>
         <nav class="button-group">
@@ -35,7 +36,7 @@
             />
           </div>
           <h1 class="main-text">
-            Театрализованное&nbsp;шоу для&nbsp;всей&nbsp;семьи
+            Театрализованное&nbsp;шоу</br>для&nbsp;всей&nbsp;семьи
           </h1>
         </div>
         <div class="main-image">
@@ -574,6 +575,7 @@
           </nav>
         </div>
       </section>
+    </div>
     </main>
     <script src="./scripts/app.js"></script>
     <script src="./scripts/showSlides.js"></script>
